<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <Preference
        android:icon="@drawable/ic_addons"
        android:key="addons"
        android:summary="@string/addons_summary"
        android:title="@string/addons_title" />

    <Preference
        android:icon="@drawable/ic_web_icon"
        android:key="website_info"
        android:summary="@string/website_info_summary"
        android:title="@string/website_info_title" />

    <Preference
        android:icon="@drawable/ic_news_icon"
        android:key="news_info"
        android:summary="@string/news_info_summary"
        android:title="@string/news_info_title" />

    <Preference
        android:icon="@drawable/ic_donate_icon"
        android:key="donate_info"
        android:summary="@string/donate_info_summary"
        android:title="@string/donate_info_title" />

    <Preference
        android:icon="@drawable/ic_forum_icon"
        android:key="forum_info"
        android:summary="@string/forum_info_summary"
        android:title="@string/forum_info_title" />

    <Preference
        android:icon="@drawable/ic_maintainers_icon"
        android:key="developer_info"
        android:title="@string/developer_info_title" />
</PreferenceScreen>